Finalize db functionality, add setup, and transformer skeleton
remove files from git

Finalize db functionality, add setup, and transformer skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ share/python-wheels/
 MANIFEST
 coronadb
 coronadb/
+main.py
+install.sh
+cleanup.sh
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
